--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2019.11.28
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.2.3
+django-cors-headers==3.2.1
 django-heroku==0.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.11.0
