--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.17.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.6",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-iframe": "^1.8.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-vis": "^1.11.7",
+    "recharts": "^1.8.5",
     "styled-components": "^5.0.1"
   },
   "scripts": {
